[package]
name = "downloader-http-rs"
version = "1.0.4"
edition = "2021"
description = "http download library, supports automatic detection and resumable download with chunks"  
license = "MIT"   
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/downloader-http-rs"

[dependencies]  
anyhow = "1.0.99"
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["blocking"] }
log = "0.4.28"
chksum-md5 = "0.1.0"
zip = "5.1.1" 
tokio = { version = "1.47.1", default-features = false, features = [
    "macros", 
    "rt",
    "sync",
    "rt-multi-thread",
    "time",
] } 
bounded_join_set = "0.3.0"

[dev-dependencies]
fast_log = "1.7.7"
